# OS10-FE-Networking

./: CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  requirements.txt  setup.cfg
devstack/: plugin.sh  settings
devstack/lib/: OS10-FE-Networking
os10_fe_networking/: __init__.py  constants.py  ironic_client.py
os10_fe_networking/agent/: .os10_fe_neutron_agent.py.swp  config.py  os10_fe_fabric_manager.py  os10_fe_fabric_manager_callback.py  os10_fe_neutron_agent.py  os10_fe_restconf_client.py  os10_restconf_client.py
os10_fe_networking/agent/rest_conf/: border_gateway_protocol.py  common.py  interface.py  port_group.py  virtual_route_forwarding.py
os10_fe_networking/plugin/ml2/: os10_fe_mech.py
os10_fe_networking/plugins/ml2/: os10_fe_mech.py  plugin.py
os10_fe_newworking/agent/: os10_fe_neutron_agent.py
os10_fe_newworking/plugin/ml2/: os10_fe_mech.py
test/functional_test/: test_os10_restconf_client.py
test/functional_test/agent/: test_os10_fe_fabric_manager.py  test_os10_restconf_client.py
test/functional_test/agent/restconf/: test_vrf.py
test/unittest/agent/: leaf1.ini  spine1.ini  test_os10_fe_fabric_manager.py
test/unittest/agent/restconf/: all_interfaces_leaf1.json  all_interfaces_leaf2.json  all_interfaces_spine1.json  all_interfaces_spine2.json  test_border_gateway_protocol.py  test_interface.py
tools/: deploy.sh  leaf1.ini  leaf2.ini  spine1.ini  spine2.ini
tools/config/: os10-fe-networking-config-generator.conf
uml/: FE_Agent_Class_Diagram.puml  FE_Agent_Component_Diagram.puml  FE_Agent_Sequence_Diagram.puml
