[metadata]
name = OS10-FE-Networking
summary = Neutron plugin that provides Dell OS10 intergration.
description-file =
    README.rst
author = DELLEMC
author-email = phil.zhang@dell.com
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    os10_fe_networking

[entry_points]
oslo.config.opts =
    os10-fe-neutron-agent = os10_fe_networking.agent.os10_fe_neutron_agent:list_opts

console_scripts =
    os10-fe-neutron-agent = os10_fe_networking.agent.os10_fe_neutron_agent:main

neutron.ml2.mechanism_drivers =
    baremetal = os10_fe_networking.plugins.ml2.os10_fe_mech:OS10FEMechanismDriver

[pbr]
autodoc_index_modules = True
api_doc_dir = contributor/api

[compile_catalog]
directory = os10_fe_networking/locale
domain = os10_fe_networking

[update_catalog]
domain = os10_fe_networking
output_dir = os10_fe_networking/locale
input_file = os10_fe_networking/locale/os10_fe_networking.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = os10_fe_networking/locale/os10_fe_networking.pot
